Bug 403482 - Add SWT bot tests for xml defined persistent types
Change-Id: I08bb80360d8768631ab95837b6a7494ffd19ea62