@@ -11,21 +11,19 @@
 		<tycho-version>0.15.0</tycho-version>
 		<eclipse-site>http://download.eclipse.org/eclipse/updates/4.3milestones/</eclipse-site>
 		<emf-site>http://download.eclipse.org/modeling/emf/emf/updates/2.9milestones/</emf-site>
-		<modeling-site>http://download.eclipse.org/modeling/emf/updates/releases</modeling-site>
-		<dtp-site>http://download.eclipse.org/datatools/downloads/drops/M_updates_1.10.2/</dtp-site>
-		<gef-site>http://download.eclipse.org/tools/gef/updates/milestones/</gef-site>
-		<wtp-site>http://build.eclipse.org/webtools/committers/wtp4x-R3.5.0-I/20130307051714/I-3.5.0-20130307051714/repository/</wtp-site>
-		<graphiti-site>http://download.eclipse.org/graphiti/updates/milestones/</graphiti-site>
-		<swtbot-site>http://download.eclipse.org/technology/swtbot/helios/dev-build/update-site</swtbot-site>
-		<tycho.testArgLine>-Xmx512m -Xms128m -XX:PermSize=32m -XX:MaxPermSize=256m -DenableDebug -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=1044</tycho.testArgLine>
+		<emf-transaction>http://download.eclipse.org/modeling/emf/transaction/updates/milestones</emf-transaction>
+		<emf-validation>http://download.eclipse.org/modeling/emf/validation/updates/milestones</emf-validation>
+		<dtp-site>http://download.eclipse.org/datatools/downloads/drops/M_updates_1.11.0/</dtp-site>
+		<gef-site>http://download.eclipse.org/tools/gef/updates/interim/</gef-site>
+		<wtp-site>http://build.eclipse.org/webtools/committers/wtp4x-R3.5.0-I/20130404041018/I-3.5.0-20130404041018/repository/</wtp-site>
+		<graphiti-site>http://download.eclipse.org/graphiti/updates/milestones/S-0.10.0M6-201303191346</graphiti-site>
+		<swtbot-site>http://download.eclipse.org/technology/swtbot/releases/latest/</swtbot-site>
 	</properties>
 	
 	<modules>
 		<module>../../plugins/org.eclipse.jpt.jpadiagrameditor.ui</module>
 		<module>../../plugins/org.eclipse.jpt.jpadiagrameditor.doc.user</module>
 		<module>../../plugins/org.eclipse.jpt.jpadiagrameditor.branding</module>
-		<!-- module>../../tests/org.eclipse.jpt.jpadiagrameditor.ui.tests</module>
-		<module>../../tests/org.eclipse.jpt.jpadiagrameditor.swtbot.tests</module-->
 		<module>../../features/org.eclipse.jpt.jpadiagrameditor.feature</module>
 		<module>../org.eclipse.jpt.jpadiagrameditor.repository</module>
 	</modules>
@@ -44,15 +42,16 @@
 				<version>${tycho-version}</version>
 				<configuration>
 					<resolver>p2</resolver>
-					<!-- dependencies>
-					<dependency>
-						<type>eclipse-feature</type>
-						<artifactId>org.eclipse.jpt.jpa.feature</artifactId>
-						<version>0.0.0</version>
-					</dependency>
-					</dependencies-->
 				</configuration>
 			</plugin>
+			<plugin>
+                <groupId>org.eclipse.tycho</groupId>
+                <artifactId>tycho-surefire-plugin</artifactId>
+                <version>${tycho-version}</version>
+                <configuration>
+                    <argLine>-Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=y</argLine>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 	
@@ -67,20 +66,25 @@
 			<url>${emf-site}</url>
 			<layout>p2</layout>
 		</repository>
+			<repository>
+			<id>GEF</id>
+			<url>${gef-site}</url>
+			<layout>p2</layout>
+		</repository>
 		<repository>
 			<id>DTP</id>
 			<url>${dtp-site}</url>
 			<layout>p2</layout>
 		</repository>
 		<repository>
-			<id>Modeling</id>
-			<url>${modeling-site}</url>
-			<layout>p2</layout>
+		    <id>EmfTransaction</id>
+		    <url>${emf-transaction}</url>
+		    <layout>p2</layout>
 		</repository>
 		<repository>
-			<id>GEF</id>
-			<url>${gef-site}</url>
-			<layout>p2</layout>
+		    <id>EmfValidation</id>
+		    <url>${emf-validation}</url>
+		    <layout>p2</layout>
 		</repository>
 		<repository>
 			<id>WTP</id>
